--- a/templates/Dash0.html
+++ b/templates/Dash0.html
@@ -445,6 +445,12 @@
 
 
 {% block nav %}
+<div id="nav" class="collapsible-palette">
+    <div class="vertical-header">NAV</div>
+
+    <div class="palette-body">
+        <!-- your existing nav content goes here -->
+
 
 <div id="nav" >
   <h3>Election Dashboard</h3>
@@ -572,6 +578,8 @@
       <canvas id="streamChart"></canvas>
     </div>
   </div>
+</div>
+</div>
 {% endblock nav %}
 
 {% block captains %}
