--- a/static/style.css
+++ b/static/style.css
@@ -376,11 +376,12 @@ body.unlocked #login { display: none; }
 }
 
 #tabletitle {
-position: relative;
-height: 20px;
-width: 100%;
+position: absolute;
+height: 14px;
+width: 1200px;
 background: white;
 left: 0;
+bottom: 235px;
 font-weight: bold;
 font-size: 1.5em;
 display: flex;
@@ -401,7 +402,7 @@ gap: 1rem;
 
 #nav {
   z-index: 12;
-	position: relative;
+	position: absolute;
 	overflow: scroll;
 	top: 0;
 	right: 0;
@@ -417,7 +418,7 @@ gap: 1rem;
   cursor: pointer;
   opacity: 0.8;
 	height: 800px;
-}20
+}
 #chartContainer {
   width: 250px;
   height: 250px;
