--- a/templates/Dash0.html
+++ b/templates/Dash0.html
@@ -579,21 +579,25 @@
 
 
 <div id="datawin" class="innertube">
-  <div style="overflow-x: auto; width: 100%; height: 100%;">
-    <div id="tabletitle" >
-      <span id="selectedTitle">Table Details</span>
-      <select id="tableSelector">
-        {% for key, value in table_types.items() %}
-        <option value="{{ key }}">{{ value }}</option>
-        {% endfor %}
-      </select>
-    </div>
+
+  <div id="tabletitle">
+    <span id="selectedTitle">Table Details</span>
+    <select id="tableSelector">
+      {% for key, value in table_types.items() %}
+      <option value="{{ key }}">{{ value }}</option>
+      {% endfor %}
+    </select>
+  </div>
+
+  <div class="table-container">
     <table id="captains-table" style="width: 100%; table-layout: fixed;">
       <thead></thead>
       <tbody></tbody>
     </table>
   </div>
+
 </div>
+
 
 <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels"></script>
